--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,17 @@
   padding: 0 15px;
 }
 
-#logo { height: 100vh; }
+#logo {
+    height: 100vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
 
 .atelier-header {
     margin-bottom: 0px;
