--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,12 @@
   padding: 0 15px;
 }
 
+#logo .container {
+  width: auto;
+  max-width: 700px;
+  padding: 0 15px;
+}
+
 #logo {
     height: 100vh;
     display: -webkit-box;
