--- a/css/custom.css
+++ b/css/custom.css
@@ -42,6 +42,10 @@
     padding-top: 15px;
 }
 
+.atelier-image {
+  margin-bottom: 5px;
+}
+
 section.body {
     margin-bottom: 60px;
     margin-top: 60px;
